# biotech-clinical-trials-sim

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_cluster.sh
configs/: biomarker_config.yaml  trial_config.yaml
frontend/: README-dev.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BiomarkerExplorer.tsx  CausalOutcomes.tsx  ExperimentRegistry.tsx  RunDashboard.tsx  Sidebar.tsx  TrialConfigurator.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  slider.tsx  table.tsx  tabs.tsx
frontend/src/types/: index.ts
src/agents/: base_agent.py  cohort_narrator.py  protocol_linter.py  result_interpreter.py
src/api/: main.py  schemas.py
src/api/routes/: agents.py  biomarkers.py  simulation.py
src/distributed/: ray_runner.py  tasks.py
src/simulation/: biomarker_models.py  causal_model.py  outcome_models.py  patient_generator.py  trial_simulator.py
src/tracking/: experiment_tracker.py
src/utils/: config.py  drift_detector.py
tests/: conftest.py  test_api.py  test_biomarker_models.py  test_causal_model.py  test_config.py  test_drift_detector.py  test_patient_generator.py  test_trial_simulator.py
