[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "biotech-clinical-trials-sim"
version = "0.1.0"
description = "Open-source distributed simulation platform for biotech clinical trials with causal AI and agentic LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Biotech Sim Team" }]
keywords = ["clinical-trials", "simulation", "causal-ai", "longevity", "biomarkers", "ray"]

[project.urls]
Repository = "https://github.com/your-org/biotech-clinical-trials-sim"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
